--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.scrumtrek</groupId>
-    <artifactId>RefactoringDemo</artifactId>
+    <artifactId>team05</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -21,6 +21,21 @@
       </plugin>
     </plugins>
   </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
+    </dependencies>
+
 
 
 </project>
